test/spec_vectors/simd_f64x2_pmin_pmax/fail/module_14.wat
(module (func $f64x2.pmax-arg-empty (result v128) (f64x2.pmax)))